--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "mongoose": "^7.1.1",
     "morgan": "~1.9.1"
   }
 }
